--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -17,8 +17,8 @@ const featuredProject = projects[0]!;
 <html lang="en">
 	<head>
 		<MainHead
-			title="Jeanine White: Personal Site"
-			description="Jeanine White: Developer, Speaker, and Writer..."
+			title="Alder Velasquez: Personal Site"
+			description="Alder Velasquez: Developer, Speaker, and Writer..."
 		/>
 		<style>
 			.wrapper {
@@ -215,14 +215,14 @@ const featuredProject = projects[0]!;
 			<div class="gradient2"></div>
 			<div class="overlay">
 				<h1 class="title">
-					<small class="subtitle">The personal site of</small>Jeanine White
+					<small class="subtitle">The personal site of</small>Alder Velasquez
 				</h1>
 				<div class="roles">
 					<span class="role">👩‍💻 Developer <span class="invert">👩‍💻 Developer</span></span>
 					<span class="role">🎤 Speaker <span class="invert">🎤 Speaker</span></span>
 					<span class="role">✏️ Writer <span class="invert">✏️ Writer</span></span>
 				</div>
-				<p class="desc">Lover of dogs, roadtrips, and poetry.</p>
+				<p class="desc">A passionate Full-Stack developer from Spain</p>
 			</div>
 		</header>
 		<main class="wrapper">
@@ -237,7 +237,7 @@ const featuredProject = projects[0]!;
 				<div class="section">
 					<h3 class="sectionTitle">About me</h3>
 					<p class="bio">
-						<span>Hello!</span> I’m Jeanine, and this is my website. It was made using{' '}
+						<span>Hello!</span> I’m Alder, and this is my website. It was made using{' '}
 						<a href="https://github.com/withastro/astro" target="_blank" rel="nofollow"> Astro</a>,
 						a new way to build static sites. This is just an example template for you to modify.
 					</p>
