--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -3,7 +3,7 @@ const currentYear = new Date().getFullYear();
 ---
 
 <footer>
-	&copy; {currentYear} Jeanine White
+	&copy; {currentYear} Alder Velasquez
 	<small class="byline">🚀 Built by Astro</small>
 </footer>
 <style>
