--- a/src/components/MainHead.astro
+++ b/src/components/MainHead.astro
@@ -1,8 +1,8 @@
 ---
 import '../styles/global.css';
 const {
-	title = 'Jeanine White: Personal Site',
-	description = 'The personal site of Jeanine White',
+	title = 'Alder Velasquez: Personal Site',
+	description = 'The personal site of Alder Velasquez',
 } = Astro.props;
 ---
 
