--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -219,8 +219,8 @@ const featuredProject = projects[0]!;
 				</h1>
 				<div class="roles">
 					<span class="role">👩‍💻 Developer <span class="invert">👩‍💻 Developer</span></span>
-					<span class="role">🎤 Speaker <span class="invert">🎤 Speaker</span></span>
-					<span class="role">✏️ Writer <span class="invert">✏️ Writer</span></span>
+					<span class="role">📸 Photographer <span class="invert">📸 Photographer</span></span>
+					<span class="role">🎮 Gamer <span class="invert">🎮 Gamer</span></span>
 				</div>
 				<p class="desc">A passionate Full-Stack developer from Spain</p>
 			</div>
