Adding social media icons

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -222,7 +222,7 @@ const featuredProject = projects[0]!;
 					<span class="role">📸 Photographer <span class="invert">📸 Photographer</span></span>
 					<span class="role">🎮 Gamer <span class="invert">🎮 Gamer</span></span>
 				</div>
-				<p class="desc">A passionate Full-Stack developer from Spain</p>
+				<p class="desc">Full-Stack developer from Spain</p>
 			</div>
 		</header>
 		<main class="wrapper">
