--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -3,7 +3,7 @@
 		<div class="monogram">AD</div>
 	</a>
 	<a class="link" href="/projects/"> Portfolio</a>
-	<a class="link" href="/about/"> About</a>
+	<a class="link" href="/about/"> About me</a>
 	<div class="socials">
 		<a class="social" href="https://twitter.com/TheMaxPrain">
 			<svg
@@ -50,6 +50,8 @@
 		gap: 1rem;
 		align-items: center;
 		padding: 1rem;
+		
+
 	}
 
 	.link {
@@ -60,6 +62,7 @@
 		text-transform: uppercase;
 		padding-top: 0.75em;
 		padding-bottom: 0.75em;
+		
 	}
 
 	.link:hover,
