--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -6,7 +6,7 @@ import Nav from '../components/Nav.astro';
 
 <html lang="en">
 	<head>
-		<MainHead title="About | Jeanine White" description="About Jeanine White Lorem Ipsum" />
+		<MainHead title="About | Alder Velasquez" description="About Alder Velasquez" />
 		<style>
 			.heroImg {
 				max-height: 24rem;
@@ -32,7 +32,7 @@ import Nav from '../components/Nav.astro';
 	<body>
 		<Nav />
 		<div class="wrapper">
-			<h1>About Jeanine</h1>
+			<h1>About Alder</h1>
 			<div class="heroImg">
 				<img
 					width="1400"
