--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -41,6 +41,10 @@ import Nav from '../components/Nav.astro';
 				/>
 			</div>
 			<div class="bio wrapper">
+				work in progress
+				<!--
+
+				
 				<p>
 					Cream cheese say cheese stinking bishop. Brie fondue hard cheese bocconcini feta camembert
 					de normandie babybel airedale. Red leicester swiss manchego mascarpone pepper jack
@@ -70,6 +74,7 @@ import Nav from '../components/Nav.astro';
 					everyone loves mascarpone cheese on toast who moved my cheese lancashire cheeseburger.
 					Fromage frais fromage frais cheese and biscuits stinking bishop cauliflower cheese.
 				</p>
+				 -->
 			</div>
 		</div>
 		<Footer />
