--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -18,7 +18,7 @@ const featuredProject = projects[0]!;
 	<head>
 		<MainHead
 			title="Alder Velasquez: Personal Site"
-			description="Alder Velasquez: Developer, Speaker, and Writer..."
+			description="Alder Velasquez: Developer, Photographer, and Gamer..."
 		/>
 		<style>
 			.wrapper {
@@ -192,6 +192,14 @@ const featuredProject = projects[0]!;
 				display: block;
 				font-weight: 700;
 				font-size: var(--f-u4);
+				text-decoration: none;
+			}
+
+			.bio > span{
+				line-height: 1;
+				font-weight: 700;
+				font-size: 1em;
+				text-decoration: underline;
 			}
 
 			.buttonContainer {
@@ -207,8 +215,8 @@ const featuredProject = projects[0]!;
 				width="1600"
 				height="1131"
 				class="img"
-				src="https://images.unsplash.com/photo-1469854523086-cc02fe5d8800?w=1200&q=75"
-				srcset="https://images.unsplash.com/photo-1469854523086-cc02fe5d8800?w=1200&q=75 800w,https://images.unsplash.com/photo-1469854523086-cc02fe5d8800?w=1200&q=75 1200w,https://images.unsplash.com/photo-1469854523086-cc02fe5d8800?w=1600&q=75 1600w,https://images.unsplash.com/photo-1469854523086-cc02fe5d8800?w=2400&q=75 2400w"
+				src="https://images.unsplash.com/photo-1668026067701-48b0b7dbdc47?w=1200&q=75"
+				srcset="https://images.unsplash.com/photo-1668026067701-48b0b7dbdc47?w=1200&q=75 800w,https://images.unsplash.com/photo-1668026067701-48b0b7dbdc47?w=1200&q=75 1200w,https://images.unsplash.com/photo-1668026067701-48b0b7dbdc47?w=1600&q=75 1600w,https://images.unsplash.com/photo-1668026067701-48b0b7dbdc47?w=2400&q=75 2400w"
 				sizes="(max-width: 800px) 800px, (max-width: 1200px) 1200px, (max-width: 1600px) 1600px, (max-width: 2400px) 2400px, 1200px"
 			/>
 			<div class="gradient"></div>
@@ -237,9 +245,11 @@ const featuredProject = projects[0]!;
 				<div class="section">
 					<h3 class="sectionTitle">About me</h3>
 					<p class="bio">
-						<span>Hello!</span> I’m Alder, and this is my website. It was made using{' '}
-						<a href="https://github.com/withastro/astro" target="_blank" rel="nofollow"> Astro</a>,
-						a new way to build static sites. This is just an example template for you to modify.
+						<span>Bio</span> I'm Alder, a full stack developer from Spain  <br/>
+						<span>2000</span> Born in Jinotepe, Nicaragua. <br/>
+						<span>2010</span> I went to live in Spain. <br/>
+						<span>2021</span> I finished my studies as a cross-platform app developer and found my first job at CIC as a back-end developer.
+
 					</p>
 					<p>
 						<a href="/about">Read more</a>
