--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -16,8 +16,8 @@ const projects = (await Astro.glob<Project>('./project/**/*.md'))
 <html lang="en">
 	<head>
 		<MainHead
-			title="All Projects | Alder Velasquez"
-			description="Learn about Alder Velasquez's most recent projects"
+			title="Jobs & Projects | Alder Velasquez"
+			description="Learn about my most recent Jobs & Projects"
 		/>
 		<style>
 			.grid {
@@ -33,7 +33,7 @@ const projects = (await Astro.glob<Project>('./project/**/*.md'))
 	<body>
 		<Nav />
 		<div class="wrapper">
-			<h1 class="title">All Projects</h1>
+			<h1 class="title">Jobs & Projects</h1>
 			<div class="grid">
 				{projects.map((project) => <PortfolioPreview project={project} />)}
 			</div>
