--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -45,7 +45,7 @@ const featuredProject = projects[0]!;
 
 			.gradient,
 			.gradient2 {
-				background-image: url('/assets/mesh-gradient.jpg');
+				background-image: url('/assets/mesh2.jpg');
 				background-size: cover;
 				pointer-events: none;
 				mix-blend-mode: screen;
@@ -60,6 +60,7 @@ const featuredProject = projects[0]!;
 			.gradient2 {
 				mix-blend-mode: multiply;
 				background-size: cover;
+				opacity: 0;
 			}
 
 			.overlay {
