nuevos tamanos de fuentes

--- a/src/layouts/project.astro
+++ b/src/layouts/project.astro
@@ -48,7 +48,7 @@ const { content } = Astro.props;
 			}
 
 			.title {
-				font-size: var(--f-u10);
+				font-size: 3.1em;
 				font-weight: 900;
 				text-transform: uppercase;
 				letter-spacing: 0.0625em;
