--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -246,11 +246,17 @@ const featuredProject = projects[0]!;
 				<div class="section">
 					<h3 class="sectionTitle">About me</h3>
 					<p class="bio">
-						<span>Bio</span> I'm Alder, a full stack developer from Spain  <br/>
-						<span>2000</span> Born in Jinotepe, Nicaragua. <br/>
-						<span>2010</span> I went to live in Spain. <br/>
-						<span>2021</span> I finished my studies as a cross-platform app developer and found my first job at CIC as a back-end developer.
 
+						<span>Bio:</span>  I am Alder, a cross-platform developer from Spain.  <br/>
+
+						<span>2000:</span>  I was born in Jinotepe, Nicaragua.  <br/>
+
+						<span>2010:</span>  I moved to Spain.  <br/>
+
+						<span>2021:</span>  I completed my studies and graduated as a cross-platform application developer.  <br/>
+
+						<span>Present:</span>  I am currently working at Cic as a BackEnd-oriented developer.
+						
 					</p>
 					<p>
 						<a href="/about">Read more</a>
